corrects typo on R/growth rate card

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1042,7 +1042,7 @@ cards:
           - overview
     fullWidth: true
     abstract: >
-      The estimated R value (transmission rate) and daily infection growth rate. The reproduction number (R), 
+      The estimated R value (transmission rate) and daily infection growth rate. The reproduction number (R)
       is the average number of secondary infections produced by a single infected person. The infection growth rate is an
       approximation of the percentage change in the number of infections each day and indicates how quickly the number of 
       infections is changing. Both estimates are presented as ranges, and the minimum and maximum values of these ranges are shown.
