--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1540,7 +1540,7 @@ cards:
 
 # nations only
 
-  - heading: People aged 18 and over who have received vaccinations, by vaccination date
+  - heading: People aged 16 and over who have received vaccinations, by vaccination date
     cardType: chart
     locationAware:
       included: 
@@ -1550,10 +1550,10 @@ cards:
 
     fullWidth: true
     abstract: >
-      The number of people aged 18 and over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
+      The number of people aged 16 and over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
       Daily figures include all vaccines that were given on the date shown, 
       and that were entered on the relevant system at the time of extract.
-      For England, these are provided for population surveillance purposes, and only people who are aged 18 and over, 
+      For England, these are provided for population surveillance purposes, and only people who are aged 16 and over, 
       have an NHS number and are currently alive are included. 
       Therefore the total numbers will not match the totals by report date. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
@@ -1728,10 +1728,10 @@ cards:
 
 #     fullWidth: false
 #     abstract: >
-#       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+#       Total percentage of people aged 16 and over who have received a COVID-19 vaccination, 
 #       by dose, up to the latest day on which vaccine data were reported.
 #       Daily figures include all vaccines that were given up to and including the date shown.
-#       For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
+#       For England, only people aged 16 and over who have an NHS number and are currently alive are included. 
 #       The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
 #       For Scotland, the denominator used is the mid-2020 population estimate,
 #       published by National Records of Scotland. For this reason, comparisons should be made with caution.
@@ -1793,10 +1793,10 @@ cards:
 
 #     fullWidth: false
 #     abstract: >
-#       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+#       Total percentage of people aged 16 and over who have received a COVID-19 vaccination, 
 #       shown by vaccination date.
 #       Daily figures include all vaccines that were given up to and including the date shown.
-#       For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
+#       For England, only people aged 16 and over who have an NHS number and are currently alive are included. 
 #       The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
 #       For Scotland, the denominator used is the mid-2020 population estimate,
 #       published by National Records of Scotland. For this reason, comparisons should be made with caution.
@@ -1857,7 +1857,7 @@ cards:
 
 # La/regions only
 
-  - heading: People aged 18 and over who have received vaccinations, by vaccination date
+  - heading: People aged 16 and over who have received vaccinations, by vaccination date
     cardType: chart
     locationAware:
       included: 
@@ -1868,9 +1868,9 @@ cards:
 
     fullWidth: true
     abstract: >
-      The number of people aged 18 or over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
+      The number of people aged 16 or over who have received a first dose COVID-19 vaccination, shown by vaccination date. 
       Daily figures include all vaccines that were given on the date shown, and that were entered on the relevant system at the time of extract.
-      For English areas, these are provided for population surveillance purposes, and only people who are aged 18 and over,
+      For English areas, these are provided for population surveillance purposes, and only people who are aged 16 and over,
       have an NHS number and are currently alive are included. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme. 
       Data for the latest 2 days, marked in grey, are incomplete.
@@ -2032,7 +2032,7 @@ cards:
 
 # region / La only
 
-  - heading: Latest vaccination uptake (18+), by vaccination date
+  - heading: Latest vaccination uptake (16+), by vaccination date
     cardType: tabContentRaw
     locationAware:
       included: 
@@ -2043,12 +2043,12 @@ cards:
 
     fullWidth: false
     abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+      Total percentage of people aged 16 and over who have received a COVID-19 vaccination, 
       by dose, up to the latest day on which vaccine data were reported.
       Daily figures include all vaccines that were given up to and including the date shown.
-      For English areas, these are provided for population surveillance purposes, and only people who are aged 18 and over, 
+      For English areas, these are provided for population surveillance purposes, and only people who are aged 16 and over, 
       have an NHS number and are currently alive are included. 
-      The denominator used is the number of people aged 18 and over on the National Immunisation Management Service (NIMS) database. 
+      The denominator used is the number of people aged 16 and over on the National Immunisation Management Service (NIMS) database. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2020 population estimate,
       published by National Records of Scotland. For this reason, comparisons should be made with caution.
@@ -2099,7 +2099,7 @@ cards:
 
 # region / la  only
 
-  - heading: Vaccination uptake (18+), by vaccination date
+  - heading: Vaccination uptake (16+), by vaccination date
     cardType: chart
     chartMode: percentage
     locationAware:
@@ -2111,12 +2111,12 @@ cards:
 
     fullWidth: false
     abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+      Total percentage of people aged 16 and over who have received a COVID-19 vaccination, 
       shown by vaccination date.
       Daily figures include all vaccines that were given up to and including the date shown.
-      For English areas, these are provided for population surveillance purposes, and only people who are aged 18 and over,
+      For English areas, these are provided for population surveillance purposes, and only people who are aged 16 and over,
       have an NHS number and are currently alive are included. 
-      The denominator used is the number of people aged 18 and over on the National Immunisation Management Service (NIMS) database. 
+      The denominator used is the number of people aged 16 and over on the National Immunisation Management Service (NIMS) database. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2020 population estimate,
       published by National Records of Scotland. For this reason, comparisons should be made with caution.
@@ -2206,6 +2206,10 @@ cards:
               metricLabel: Age group
               parameter: age
               metrics:
+              #Both Eng and Scot
+              - label: 16 to 17
+                value: "16_17"
+
               #Eng only
               - label: 18 to 24
                 value: "18_24"
@@ -2299,6 +2303,10 @@ cards:
               metricLabel: Age group
               parameter: age
               metrics:
+              #Both Eng and Scot
+              - label: 16 to 17
+                value: "16_17"
+
               #Eng only
               - label: 18 to 24
                 value: "18_24"
@@ -2383,7 +2391,7 @@ cards:
 
 # England, Scotland, regions, LAs only
 
-  - heading: Vaccination uptake (18+) by area
+  - heading: Vaccination uptake (16+) by area
     cardType: simpleTableStatic
     locationAware:
       included: 
@@ -2394,10 +2402,10 @@ cards:
 
     fullWidth: false
     abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, by dose, up to the latest day on which vaccine data were reported.
-      For English areas, these are provided for population surveillance purposes, and only people who ared aged 18 and over,
+      Total percentage of people aged 16 and over who have received a COVID-19 vaccination, by dose, up to the latest day on which vaccine data were reported.
+      For English areas, these are provided for population surveillance purposes, and only people who ared aged 16 and over,
       have an NHS number and are currently alive are included. 
-      The denominator used is the number of people aged 18 and over on the National Immunisation Management Service (NIMS) database. 
+      The denominator used is the number of people aged 16 and over on the National Immunisation Management Service (NIMS) database. 
       They will differ from NHS England daily outputs, which provide operational data for the management of the vaccination programme.
       For Scottish areas, the denominator used is the mid-2020 population estimate, published by National Records of Scotland. 
       For this reason, comparisons should be made with caution. 
