--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,4 +1,3 @@
-
 - appearByUpdate: "2021-08-03"
   disappearByUpdate: "2021-08-05"
   date: "2021-08-03"
@@ -152,7 +151,7 @@
   disappearByUpdate: "2021-03-05"
   date: "2021-03-05"
   body: >
-    Owing to a delay in the submission of cases data for England to PHE, today's
+    Owing to a delay in the submission of cases data for England to UKHSA, today's
     update is delayed.
 
 
