--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -717,7 +717,7 @@ cards:
       Number of people who have had at least one positive COVID-19 test result, either lab-reported or lateral flow device (England only),
       by date reported. 
       Positive rapid lateral flow test results can be confirmed with PCR tests taken within 72 hours. If the PCR test results are negative, these are not reported as cases.
-      People tested positive more than once are only counted once. Initially only pillar 1 tests (NHS and, in England, PHE labs) were included
+      People tested positive more than once are only counted once. Initially only pillar 1 tests (NHS and, in England, UKHSA labs) were included
       but commercial tests have been included from varying dates between 15th June 2020 and 14th July 2020 for
       each nation, leading to step increases in the numbers of cases reported at different times.
 
@@ -869,7 +869,7 @@ cards:
 
     abstract: >
       Number of people with at least one positive, negative or void COVID-19 test result, either lab-reported or lateral flow device (England only). 
-      Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
+      Initially only NHS and, in England, UKHSA tests were included but commercial tests have been included from   
       different dates between 15th June 2020 and 14th July 2020 for each nation.  National data are not directly comparable.
 
     download:
@@ -1941,4 +1941,3 @@ cards:
         filename: cardMetadata/cases/cardCasesAndRatesByArea.md
 
 ##############################################################################################################################
-
